--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "express-handlebars": "^4.0.3",
-    "mongoose": "^5.9.10"
+    "express-session": "^1.17.1",
+    "mongoose": "^5.9.10",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
   }
 }
